--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Gruppe 4 semesterprojekt</p>
+            <p style="color: #ecf0f1" >&copy; @DateTime.Now.Year - Gruppe 4 semesterprojekt</p>
         </footer>
     </div>
 
