--- a/WebApplication/Content/ProductList.css
+++ b/WebApplication/Content/ProductList.css
@@ -1,5 +1,6 @@
 ﻿body {
-    background: linear-gradient(to right, #7BF2E9, #B65EBA);
+    background-color: #34495e; /* Til browsere uden gradient support */
+    background-image: linear-gradient(#34495e, #1c2731);
     min-height: 100vh
 }
 
@@ -7,17 +8,46 @@
     color: #aaa
 }
 
-img {
-    height: 170px;
-    width: 140px
+.productpic {
+    border-radius: 5px;
+    float: left;
+    margin-right: 10px;
+    height: 150px;
+    width: 150px
 }
 
 .title_yo {
     color: white;
     align-content: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
 }
 
+
 .sub_title_productList {
-    color: white;
+    color: #e74c3c;
+}
+
+
+.headimage {
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+    display: block;
+}
+
+
+.list-group-item {
+    background-color: #95a5a6;
+}
+
+.buybutt{
+
+    float: right;
+}
+
+.producttext{
+    margin-top: 0px;
+    margin-bottom: 5px;
+
 }
