--- a/WebApplication/Views/CheckOut/Index.cshtml
+++ b/WebApplication/Views/CheckOut/Index.cshtml
@@ -16,11 +16,11 @@
 
 
 
-<h2>Færdiggør din bestilling</h2>
+<h2 class="siteheadline">Færdiggør din bestilling</h2>
 
-<div>
-    <h4>Din Ordre</h4>
-    <hr />
+<div class="sitebg">
+    <h4 style="margin-left: 1%; ">Din Ordre</h4>
+
     <dl class="dl-horizontal">
         <dt>
             Kunde id
@@ -57,7 +57,7 @@
     </dl>
 </div>
 
-<table class="table">
+<table class="table sitebg">
     <tr>
         <th>
             Produkt
