--- a/WebApplication/Views/Customer/CustomerCreated.cshtml
+++ b/WebApplication/Views/Customer/CustomerCreated.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "CustomerCreated";
 }
 
-<h2>Customer has been created!</h2>
+<h2 class="siteheadline">Customer has been created!</h2>
 
