--- a/WebApplication/Views/Login/index.cshtml
+++ b/WebApplication/Views/Login/index.cshtml
@@ -17,8 +17,9 @@
         </script>
     }
 </head>
-<body>
-    <div class="content" id="Main-Content">
+<body class="sitebg">
+    <h2 class="siteheadline">Login</h2>
+    <div class="content sitebg" id="Main-Content">
 
         <div class="w3ls-slider">
             <div class="hub-slider">
@@ -27,7 +28,7 @@
                         <li>
                             <div class="login-form login-form-left">
                                 <div class="agile-row">
-                                    <h2>Login</h2>
+                      
                                     <div class="login-agileits-top">
                                         @using (Html.BeginForm("loginform", "login", FormMethod.Post))
                                         {
