--- a/WebApplication/Views/Product/Details.cshtml
+++ b/WebApplication/Views/Product/Details.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm("Index", "Cart", Model))
 {
 
-    <div>
+    <div class="sitebg">
         <div class="jumbotron jumbotron-fluid">
             <h1 class="display-4">@Model.Name</h1>
             <p class="lead">Få mere information omkring produktet og vælg farver og størrelser nedenfor!</p>
