--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -12,6 +12,8 @@
 @{
     decimal totalprice = 0;
 }
+
+<img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
 <body>
     @using (Html.BeginForm("Index", "CheckOut"))
     {
