--- a/WebApplication/Views/Login/index.cshtml
+++ b/WebApplication/Views/Login/index.cshtml
@@ -16,7 +16,10 @@
             };
         </script>
     }
+    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
 </head>
+
+
 <body class="sitebg">
     <h2 class="siteheadline">Login</h2>
     <div class="content sitebg" id="Main-Content">
