--- a/WebApplication/Views/CheckOut/Receipt.cshtml
+++ b/WebApplication/Views/CheckOut/Receipt.cshtml
@@ -15,6 +15,8 @@
     }
 }
 
+    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
+
 @*<h2>Tak for din betaling</h2>*@
 @if (!(Model == null)) {
     <h2 class="siteheadline">Tak for din betaling</h2>
