--- a/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/Views/Customer/Create.cshtml
@@ -10,6 +10,7 @@
 {
     @Html.AntiForgeryToken()
 
+    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage" style="margin-top: -6px;">
     <h2 class="siteheadline2">Customer</h2>
     <div class="form-horizontal sitebg">
 
