--- a/WebApplication/Views/Customer/CustomerCreated.cshtml
+++ b/WebApplication/Views/Customer/CustomerCreated.cshtml
@@ -3,5 +3,6 @@
     ViewBag.Title = "CustomerCreated";
 }
 
+    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage" >
 <h2 class="siteheadline">Customer has been created!</h2>
 
