Gjort password felt i create customer til ikke at vise clear text

--- a/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/Views/Customer/Create.cshtml
@@ -6,12 +6,12 @@
 
 <h2>View</h2>
 
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
 
     <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage" style="margin-top: -6px;">
-    <h2 class="siteheadline2">Customer</h2>
+    <h2 class="siteheadline2">Opret dig selv som kunde her</h2>
+    <h4 class="siteheadline2">Udfyld felterne korrekt og tryk "Opret"</h4>
     <div class="form-horizontal sitebg">
 
         <hr />
@@ -75,18 +75,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.Password("Password") @*model => model.Password, new { htmlAttributes = new { @class = "form-control" } }*@
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Opret" class="btn btn-default" />
             </div>
         </div>
+        <hr />
     </div>
 }
-
-
-
