Expanded site layout + intergration of order test

--- a/WebApplication/Views/CheckOut/NoCustomerLoggedIn.cshtml
+++ b/WebApplication/Views/CheckOut/NoCustomerLoggedIn.cshtml
@@ -2,4 +2,6 @@
     ViewBag.Title = "NoCustomerLoggedIn";
 }
 
-<h2>Du er ikke logget ind. Gå til loginvinduet eller opret dig selv som bruger</h2>
+    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
+<h2 style="color: red; text-align: center;"> Fejl!</h2>
+<h2 class="whitetext" style="text-align: center;">Du er ikke logget ind. Gå til loginvinduet eller opret dig selv som bruger</h2>
