--- a/WebApplication/Views/Login/LoginSuccess.cshtml
+++ b/WebApplication/Views/Login/LoginSuccess.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     ViewBag.Title = "LoginSuccess";
 }
-
-<h2>Du er nu logget ind!</h2>
+<img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
+<h2 class="whitetext" style=" text-align: center;">Du er nu logget ind!</h2>
