--- a/WebApplication/Views/Shared/Mainmenu.cshtml
+++ b/WebApplication/Views/Shared/Mainmenu.cshtml
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="https://i.imgur.com/in8q3fb.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
