--- a/WebApplication/Views/Customer/CustomerCreated.cshtml
+++ b/WebApplication/Views/Customer/CustomerCreated.cshtml
@@ -1,8 +1,10 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "CustomerCreated";
 }
 
-    <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage" >
-<h2 class="siteheadline">Customer has been created!</h2>
-
+<img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
+@if (ViewBag.Message == null) {
+    <h2 class="siteheadline">Customer has been created!</h2>
+} else {
+    <h2 class="siteheadline">@ViewBag.Message</h2>
+}
