--- a/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/Views/Customer/Create.cshtml
@@ -75,7 +75,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.Password("Password") @*model => model.Password, new { htmlAttributes = new { @class = "form-control" } }*@
+                @Html.Password("Password") 
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
