--- a/WebApplication/Views/Customer/CustomerCreated.cshtml
+++ b/WebApplication/Views/Customer/CustomerCreated.cshtml
@@ -4,7 +4,7 @@
 
 <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
 @if (ViewBag.Message == null) {
-    <h2 class="siteheadline">Customer has been created!</h2>
+    <h2 class="siteheadline">Du er nu oprettet som bruger!</h2>
 } else {
     <h2 class="siteheadline">@ViewBag.Message</h2>
 }
