--- a/WebApplication/Views/Shared/Mainmenu.cshtml
+++ b/WebApplication/Views/Shared/Mainmenu.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+@using WebApplication.Controllers
 <html>
 <head>
     <link rel="icon" href="https://i.imgur.com/in8q3fb.png">
@@ -7,6 +8,20 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @{
+        string fullname = "";
+        WebApplication.CustomerServiceReference.Customer customer = (WebApplication.CustomerServiceReference.Customer)Session["LoggedInUser"];
+        if (customer != null)
+        {
+            fullname = "Hello, " + customer.FirstName + " " + customer.LastName + "!";
+        }
+        else
+        {
+            fullname = "Du er ikke logget ind!";
+        }
+
+
+    }
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -21,18 +36,21 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                
+
                     <li>@Html.ActionLink("Produkter", "List", "Product")</li>
                     <li>@Html.ActionLink("Kurv", "Index", "Cart")</li>
                     <li>@Html.ActionLink("Opret Bruger", "create", "Customer")</li>
                     <li>@Html.ActionLink("Login", "index", "Login")</li>
                 </ul>
+                <h4 class="loginname">
+                    @fullname
+                </h4>
             </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-      
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
