--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-    <link href="~/Content/Site.css" rel="stylesheet" />
+﻿<link href="~/Content/Site.css" rel="stylesheet" />
 
 @model IEnumerable<WebApplication.OrderService.SalesLineItem>
 
@@ -7,17 +6,14 @@
     ViewBag.Title = "Index";
 }
 
-
-
 @{
     decimal totalprice = 0;
 }
 
 <img src="https://i.imgur.com/TWSTK8s.png" alt="Product Image" class="headimage">
 <body>
-    @using (Html.BeginForm("Index", "CheckOut"))
-    {
-    <h2 class="siteheadline">Din indkøbskurv</h2>
+    @using (Html.BeginForm("Index", "CheckOut")) {
+        <h2 class="siteheadline">Din indkøbskurv</h2>
         <table class="table sitebg">
 
             <tr>
@@ -48,16 +44,13 @@
                 <th></th>
             </tr>
 
-            @if (Model != null && Model.Count() > 0)
-            {
+            @if (Model != null && Model.Count() > 0) {
 
-                foreach (var item in Model)
-                {
+                foreach (var item in Model) {
                     totalprice += item.Product.Price * item.amount;
                 }
 
-                foreach (var item in Model)
-                {
+                foreach (var item in Model) {
 
                     <tr>
                         <td>
@@ -109,9 +102,7 @@
                     <td></td>
                     <td></td>
                 </tr>
-            }
-            else
-            {
+            } else {
                 <h3 style="color:red;">
                     Du har ingen produkter i din indkøbskurv.
                 </h3>
