changed placeholder image

--- a/WebApplication/Views/Cart/Index.cshtml
+++ b/WebApplication/Views/Cart/Index.cshtml
@@ -54,7 +54,7 @@
 
                     <tr>
                         <td>
-                            <img src="https://i.imgur.com/Hx6uRNh.png" alt="stockimage" height="100" width="100">
+                            <img src="https://i.imgur.com/SQLRuDf.jpg" alt="stockimage" height="100" width="100">
                         </td>
                         <td>
                             @(Model.ToList().IndexOf(item) + 1)
