--- a/WebApplication/Views/Product/List.cshtml
+++ b/WebApplication/Views/Product/List.cshtml
@@ -31,7 +31,7 @@
                      
 
                     <li class="list-group-item" style="background-color: #ecf0f1;" >
-                        <img src="https://i.imgur.com/UfE46zA.png" alt="Product Image" class="productpic">
+                        <img src="https://i.imgur.com/SQLRuDf.jpg" alt="Product Image" class="productpic">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
